--- a/styles/styles.css
+++ b/styles/styles.css
@@ -412,5 +412,8 @@ textarea{
     .autor{
         font-size: 0.5;
     }
+    form{
+        border: 1px solid rgba(0, 0, 0, 0.555);
+    }
    
 }
