--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,443 @@
-.textoLoc
+*{
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+    font-family: 'Playfair Display', serif;
+    color: #ffffff;   
+    overflow-x: hidden;   
+}
+body{                    
+    box-sizing: content-box;    
+    background-color: black;
+    width: 100%;    
+           
+}
+.container {
+    width: 90vw; /* Ajustado para 90% */
+    margin: 0 auto; /* Centralizado horizontalmente */
+    display: flex;
+    flex-direction: column;
+}
+.logo {
+    width: 5vw;
+    height: auto;
+    margin-right: 10px;
+    
+}
+nav{
+    display: flex;
+    font-size: 1.5rem;
+    gap: 20px;
+    margin: 10px;    
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    background-color: #00587A;
+    border-radius: 40px;
+}
+.ap {
+    position: relative; /* Define posição relativa para os elementos internos */
+    height: 75vh; /* Altura da seção */
+    overflow: hidden; /* Oculta qualquer conteúdo que ultrapasse os limites */ 
+    margin-bottom: 3rem;   
+}
+.background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 90vw;
+    height: 75vh;
+    object-fit: cover;
+    border-radius: 30px;
+    
+}
+.content{
+    width: 100%;
+    align-items: center;
+    padding: 20px;  
+    font-size: 2em;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;    
+}
+
+.btnOrc {    
+    padding: 5px;
+    background-color: #000000;
+    color: white;
+    text-decoration: none;
+    border-radius: 30px;
+}
+.btnOrc:hover {
+    background-color: #00587A;
+}
+#sobre,
+#orc,
+#loc{
+    position: relative; /* Define posição relativa para os elementos internos */
+    height: 85vh; /* Altura da seção */
+    overflow: hidden; /* Oculta qualquer conteúdo que ultrapasse os limites */
+    margin-bottom: 50px;
+}
+#fotosRacks,
+#fotosCoz{
+    position: relative; /* Define posição relativa para os elementos internos */
+    height: 100vh; /* Altura da seção */
+    overflow: hidden; /* Oculta qualquer conteúdo que ultrapasse os limites */
+    margin-bottom: 50px;
+
+}
+.fundoSobre,
+.fundoOrc,
+.fundoLoc{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    
+    object-fit: cover;
+    border-radius: 30px;    
+}
+.fundoRacks,
+.fundoCoz{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;    
+    object-fit: cover;
+    border-radius: 30px;
+}
+
+.cardSobre,
+.cardLoc{
+    position: absolute;
+    display: flex;
+    top: 10%;
+    bottom: 10%;
+    left: 5%;
+    right: 5%;
+    border: 10px solid rgba(0, 0, 0, 0.555);
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.74);
+    overflow: hidden;
+}
+
+
+.imgsobre{
+    border-radius: 20px;
+    width: 65%;
+    padding: 3px;
+}
+.textoSobre,
+.textoLoc{
+    width: 50%;
+    padding: 20px; /* Adicione algum preenchimento para espaçamento */
+    color: white;
+    font-size: 2rem;
+    overflow: auto; /* Adicione scroll quando o texto for muito longo */
+}
+form{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    top: 10%;
+    bottom: 10%;
+    left: 5%;
+    right: 5%;
+    border: 10px solid rgba(0, 0, 0, 0.555);
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.74);
+    overflow: hidden; 
+    gap: 20px;
+}
+.inputText{
+    width: 50%; 
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;   
+    gap: 0%;
+}
+.textArea{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;    
+}
+input,
+textarea{
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.555);
+    font-size: 1.5rem;
+    background-color: transparent    
+}
+#enviar:hover{
+    background-color: #00587A;
+    color: #ffffff;
+    cursor: pointer;    
+}
+#enviar{
+    padding: 10px;   
+}
+.textoRacks,
+.textoCoz {
+    font-size: 1.5rem; /* Reduzindo o tamanho da fonte */
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+    text-align: left;
+    color: white;
+    background-color: #0000007a;
+    border-radius: 20px;
+    padding: 10px;
+    z-index: 2;
+}
+.slide{
+    width: 100%;
+    display: none; /* Oculta os slides por padrão */
+    
+}
+.slide img{
+    width: 100%;
+    height: 99%;
+}
+#prevBtnCoz,
+#nextBtnCoz,
+#prevBtnSala,
+#nextBtnSala{
+    color: rgb(255, 255, 255);
+    font-size: 2rem ;
+    background-color: #00000085;
+    padding: 1%;
+    border-radius: 40px;
+    border: 1px solid white;
+}
+.carrocelSalas,
+.carouselCoz{
+    position: absolute;
+    display: flex;
+    justify-content: center;   
+    top: 5%;
+    bottom: 20%;
+    left: 10%;
+    right: 10%;
+    transform: translate(0%, 10%);
+    border: 10px solid rgba(0, 0, 0, 0.555);
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.74);
+    overflow: hidden; 
+    gap: 20px;
+}
+.loc{
+   width: 50vw;
+   display: flex;   
+   align-items: center; 
+}
+.social{
+    position: fixed;
+    right: 5px;
+    top: 60px;
+    display: flex;
+    flex-direction: column;    
+}
+.dados {
+    display: flex;
+    align-items: center; /* Alinha itens verticalmente */
+    justify-content: space-between;
+    font-size: 2rem;   
+    border-radius: 10px;
+    padding: 10px; /* Adiciona algum preenchimento */
+}
+.nome {
+    display: flex;
+    align-items: center; /* Alinha itens verticalmente */
+}
+.nome{
+    margin-left: 10px; /* Adiciona algum espaço entre o logo e o texto */
+}
+
+.Telefone {
+    text-align: right; /* Centraliza o texto */
+}
+.autor{
+    padding: 5px;
+    font-size: 2rem;
+    border-radius: 10px; 
+}
+.autor:hover{
+    background-color: #00587A;
+    border-radius: 10px;
+}
+.nome-header {
+    margin: 10px;
+    display: flex;
+    align-items: center; 
+}
+
+.nome-header {
+    font-size: 1.5rem;
+    
+}
+
+.nome-header h3 {
+    margin-left: 5px; /* Adiciona algum espaço entre a logo e o texto */
+    margin-right: 50px;
+}
+#prevBtnSala,
+#prevBtnCoz{
+    position: absolute;
+    top: 50%;
+    left: 0;    
+}
+#nextBtnSala,
+#nextBtnCoz{
+    position: absolute;
+    top: 50%;
+    right: 0;
+}
+.whats,
+.instagram,
+.facebook{
+    width: 4vw;    
+}
+#sobe{
+    position: fixed;
+    right: 10px;
+    bottom: 60px;
+    width: 7vw;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s;
+    transform: translatey(100%);
+    cursor: pointer;
+}
+#sobe.visible{
+    visibility: visible;
+    opacity: 0.6;
+    transform: translateY(0);
+}
+p{
+    font-size: 100%;
+}
+@media screen and (max-width: 768px) {
+
+    #sobre{
+        height: 50%;
+    }
+    .logo{
+        width: 10vw;
+    }
+    a,
+    nav{
+        font-size: 0.5rem; /* Reduza o tamanho do texto em dispositivos menores */
+    }
+    
+    h1{
+        font-size: 1.5rem; /* Reduza o tamanho do texto em dispositivos menores */
+    }
+    h6{
+        font-size: 0.6rem; /* Reduza o tamanho do texto em dispositivos menores */
+    }
+}
+@media screen and (max-width: 768px) {
+    #sobre,
+    #orc,
+    #loc,
+    .fundoSobre{
+        height: 30vh;
+    }
+}
+@media screen and (max-width: 768px) {
+    .cardSobre,
+    .cardLoc,
+    #orcForm
+    #fts{
+        display: flex;
+        height: 80%;
+        display: flex;
+        top: 10%;       
+        left: 5%;
+        border: 3px solid black;
+        
+    }
+    .textoLoc,
+    .textoSobre{
+
+        font-size: 0.7rem;
+    }
+    form{
+        border: 1px solid rgba(0, 0, 0, 0.555);
+    }
+    input{
+        font-size: 0.8rem;
+    }
+    .inputText{
+        font-size: 0.1rem;
+    }
+    #enviar{
+        padding: 1px;
+        font-size: 0.8rem;
+    }
+    textarea{
+        height: 60%;
+        font-size: 0.5rem;
+    }
+    #fotosRacks,
+    #fotosCoz{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 30vh;
+        
+    }
+    .textoRacks,
+    .textoCoz{
+        font-size: 0.5rem;
+        transform: translate(-50%, -50%);
+        padding: 5px;
+    }
+    .carrocelSalas,
+    .carouselCoz{
+        border: 3px solid black;
+        height: 90%;
+        transform: translate(0%, -3%);        
+    }
+    button{
+        font-size: rem;
+
+    }
+    .slide img{
+        height: 99%;
+    }
+    
+   
+}
+@media screen and (max-width: 414px){
+
+    form{
+        border: 1px solid rgba(0, 0, 0, 0.555);
+        transform: translate(0%, -10%);
+        height: 70%;
+    }
+    .carrocelSalas,
+    .cardLoc,
+    .carouselCoz{
+        transform: translate(0%, 0%);
+        height: 70%;
+    }
+    
+}
+@media screen and (max-height: 554px){
+    p{
+        font-size: 60%;
+    }
+    .textoLoc{
+        font-size:100%;
+    }
+}
